--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>This is lesson 1</title>
     <style type="text/css" >
         h1{
             color:blue;
